fix adjustOrientOnCalendarOverflow

--- a/assets/bootstrap/Picker.less
+++ b/assets/bootstrap/Picker.less
@@ -1,5 +1,6 @@
 .@{prefixClass}-picker {
   &-input {
+    outline:none;
     background: white !important;
     cursor: pointer !important;
     display: table-cell;
