--- a/assets/index/Picker.less
+++ b/assets/index/Picker.less
@@ -11,6 +11,7 @@
   }
 
   &-input {
+    outline:none;
     box-sizing: border-box;
     cursor: pointer;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -84,13 +85,23 @@
     animation-play-state: paused;
   }
 
-  &-slide-up-enter&-slide-up-enter-active {
+  &-slide-up-enter&-slide-up-enter-active.@{prefixClass}-orient-top {
     animation-name: rcDropdownSlideUpIn;
     animation-play-state: running;
   }
 
-  &-slide-up-leave&-slide-up-leave-active {
+  &-slide-up-enter&-slide-up-enter-active.@{prefixClass}-orient-bottom {
+    animation-name: rcDropdownSlideDownIn;
+    animation-play-state: running;
+  }
+
+  &-slide-up-leave&-slide-up-leave-active.@{prefixClass}-orient-top {
     animation-name: rcDropdownSlideUpOut;
+    animation-play-state: running;
+  }
+
+  &-slide-up-leave&-slide-up-leave-active.@{prefixClass}-orient-bottom {
+    animation-name: rcDropdownSlideDownOut;
     animation-play-state: running;
   }
 
@@ -115,6 +126,31 @@
     100% {
       opacity: 0;
       transform-origin: 0% 0%;
+      transform: scaleY(0);
+    }
+  }
+
+  @keyframes rcDropdownSlideDownIn {
+    0% {
+      opacity: 0;
+      transform-origin: 100% 100%;
+      transform: scaleY(0);
+    }
+    100% {
+      opacity: 1;
+      transform-origin: 100% 100%;
+      transform: scaleY(1);
+    }
+  }
+  @keyframes rcDropdownSlideDownOut {
+    0% {
+      opacity: 1;
+      transform-origin: 100% 100%;
+      transform: scaleY(1);
+    }
+    100% {
+      opacity: 0;
+      transform-origin: 100% 100%;
       transform: scaleY(0);
     }
   }
